--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "konva": "^4.0.5",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-jss": "^8.6.1",
+    "react-konva": "^16.9.0-0",
+    "react-scripts": "3.1.1",
+    "react-use": "^11.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
